# performance

./: CHANGELOG.rst  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
data/: random_numbers.txt  source_example_image.txt
data/bubblesort/: CMakeLists.txt  Makefile  bubblesort-golem.jl  bubblesort-julia-optimized.jl  bubblesort-rosetta.jl  bubblesort.c  bubblesort.cpp  results.txt
src/bubblesort/: cython_fast.py  cython_golem.py  fast.py  fileio.py  golem.py  jit.py  list_comprehension.py  random_number_list.py  sorted.py
src/bubblesort/clibs/: cython_fast.c  cython_fast.pyx  cython_golem.c  cython_golem.pyx
src/dis/: main.py
src/fibonacci/: generator.py  list.py
src/image/: aware.py  unaware.py
tests/: conftest.py  pytest.ini
tests/unit/: test_bubblesort.py  test_fibonacci.py
