[metadata]
name = performance
description = A performance python example for talk at USM in 2022
author = Valentin Ziel
author_email = vziel@usm.lmu.de
license = MIT
url = https://github.com/xoquon/performance
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 3 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, like:
all =
    virtualenv
